infra/k8s/analytics-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
  namespace: marketplace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      containers:
        - name: analytics
          image: gayrat/analytics-service:latest
          ports:
            - containerPort: 8010
          readinessProbe:
            httpGet:
              path: /health
              port: 8010
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: marketplace
spec:
  selector:
    app: analytics-service
  ports:
    - port: 8010
      targetPort: 8010
