infra/k8s/catalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-service
  namespace: marketplace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: catalog-service
  template:
    metadata:
      labels:
        app: catalog-service
    spec:
      containers:
        - name: catalog
          image: gayrat/catalog-service:latest
          ports:
            - containerPort: 8002
          readinessProbe:
            httpGet:
              path: /health
              port: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  namespace: marketplace
spec:
  selector:
    app: catalog-service
  ports:
    - port: 8002
      targetPort: 8002
