infra/k8s/media-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-service
  namespace: marketplace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: media-service
  template:
    metadata:
      labels:
        app: media-service
    spec:
      containers:
        - name: media
          image: gayrat/media-service:latest
          ports:
            - containerPort: 8011
          readinessProbe:
            httpGet:
              path: /health
              port: 8011
---
apiVersion: v1
kind: Service
metadata:
  name: media-service
  namespace: marketplace
spec:
  selector:
    app: media-service
  ports:
    - port: 8011
      targetPort: 8011
