infra/k8s/notifications-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-service
  namespace: marketplace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notifications-service
  template:
    metadata:
      labels:
        app: notifications-service
    spec:
      containers:
        - name: notifications
          image: gayrat/notifications-service:latest
          ports:
            - containerPort: 8009
          readinessProbe:
            httpGet:
              path: /health
              port: 8009
---
apiVersion: v1
kind: Service
metadata:
  name: notifications-service
  namespace: marketplace
spec:
  selector:
    app: notifications-service
  ports:
    - port: 8009
      targetPort: 8009
