infra/k8s/orders-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-service
  namespace: marketplace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orders-service
  template:
    metadata:
      labels:
        app: orders-service
    spec:
      containers:
        - name: orders
          image: gayrat/orders-service:latest
          ports:
            - containerPort: 8005
          readinessProbe:
            httpGet:
              path: /health
              port: 8005
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
  namespace: marketplace
spec:
  selector:
    app: orders-service
  ports:
    - port: 8005
      targetPort: 8005
