infra/k8s/payments-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-service
  namespace: marketplace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payments-service
  template:
    metadata:
      labels:
        app: payments-service
    spec:
      containers:
        - name: payments
          image: gayrat/payments-service:latest
          ports:
            - containerPort: 8006
          readinessProbe:
            httpGet:
              path: /health
              port: 8006
---
apiVersion: v1
kind: Service
metadata:
  name: payments-service
  namespace: marketplace
spec:
  selector:
    app: payments-service
  ports:
    - port: 8006
      targetPort: 8006
