infra/k8s/search-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-service
  namespace: marketplace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: search-service
  template:
    metadata:
      labels:
        app: search-service
    spec:
      containers:
        - name: search
          image: gayrat/search-service:latest
          ports:
            - containerPort: 8003
          readinessProbe:
            httpGet:
              path: /health
              port: 8003
---
apiVersion: v1
kind: Service
metadata:
  name: search-service
  namespace: marketplace
spec:
  selector:
    app: search-service
  ports:
    - port: 8003
      targetPort: 8003
