infra/k8s/vendor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vendor-service
  namespace: marketplace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vendor-service
  template:
    metadata:
      labels:
        app: vendor-service
    spec:
      containers:
        - name: vendor
          image: gayrat/vendor-service:latest
          ports:
            - containerPort: 8007
          readinessProbe:
            httpGet:
              path: /health
              port: 8007
---
apiVersion: v1
kind: Service
metadata:
  name: vendor-service
  namespace: marketplace
spec:
  selector:
    app: vendor-service
  ports:
    - port: 8007
      targetPort: 8007
